remove next-auth, didn't like it

--- a/lib/i18n/locales/en/translations.json
+++ b/lib/i18n/locales/en/translations.json
@@ -4,6 +4,7 @@
     "name": "Name",
     "email": "Email",
     "message": "Message",
-    "submit": "Submit"
+    "submit": "Submit",
+    "loading": "Loading"
   }
 }
