--- a/lib/i18n/locales/es/translations.json
+++ b/lib/i18n/locales/es/translations.json
@@ -4,6 +4,7 @@
     "name": "Nombre",
     "email": "Correo",
     "message": "Mensaje",
-    "submit": "Enviar"
+    "submit": "Enviar",
+    "loading": "Cargando"
   }
 }
