appConfiguration: move orm and cache inside app config

--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -722,7 +722,7 @@
       "logs": "Logs",
       "setup": "Set up",
       "rolesAndPermissions": "Roles & Permissions",
-      "accountsAndUsers": "Accounts & Users"
+      "accountsAndUsers": "Accounts"
     },
     "subscription": {
       "limits": {
