--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -726,7 +726,7 @@
       "settings": "Ajustes",
       "setup": "Configuración",
       "rolesAndPermissions": "Roles & Permisos",
-      "accountsAndUsers": "Cuentas & Usuarios"
+      "accountsAndUsers": "Cuentas"
     },
     "subscription": {
       "limits": {
