move all app routes to (app) group, add new-account and invitation routes

--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -800,168 +800,10 @@
     "dashboard": {
       "summary": "Summary"
     },
-    "contracts": {
-      "title": "Contracts",
-      "new": {
-        "title": "New contract",
-        "description": "Create a contract...",
-        "addSignatories": "Add signatories...",
-        "save": "Create and request signatures"
-      },
-      "details": {
-        "general": "General information"
-      },
-      "employees": {},
-      "signatory": "Signatory",
-      "signatories": "Signatories",
-      "spectator": "Spectator",
-      "status": {
-        "PENDING": "Pending",
-        "SIGNED": "Signed",
-        "ARCHIVED": "Archived"
-      },
-      "pending": {
-        "title": "Pending"
-      },
-      "signed": {
-        "title": "Signed"
-      },
-      "archived": {
-        "title": "Archived"
-      },
-      "members": {
-        "add": "Add signatories",
-        "select": "Select users who will sign the contract"
-      },
-      "sign": {},
-      "actions": {
-        "create": "Create contract?",
-        "createDescription": "Every member will get a copy via email.",
-        "selectSignatoryOrSpectator": "Select signatories and viewers"
-      },
-      "placeholders": {
-        "name": "Contract name",
-        "description": "Large contract description",
-        "signatoryEmail": "signatory{'@'}company.com",
-        "spectatorEmail": "spectator{'@'}company.com"
-      },
-      "activity": {
-        "types": {
-          "CREATED": "Created contract",
-          "UPDATED": "Updated contract"
-        }
-      },
-      "errors": {
-        "maxFileReached": "Upload a document smaller than 20MB. Remember that no physical signature is required.",
-        "noContracts": "There are no contracts",
-        "nameRequired": "Name required.",
-        "descriptionRequired": "Description required.",
-        "fileRequired": "File required.",
-        "linkedAccountRequired": "Select a linked account (client or provider).",
-        "atLeastNSignatories": "Add at least 2 signatories."
-      }
-    },
-    "employees": {
-      "my": "My employees",
-      "new": {
-        "multiple": "Add employees",
-        "title": "Add employee"
-      },
-      "addendum": {},
-      "lists": {},
-      "actions": {
-        "add": "Add employee",
-        "import": "Import employees",
-        "select": "Select the employees that will work on this contract",
-        "selectEmployees": "Select employees",
-        "uploadCsv": "Upload a CSV file with columns:",
-        "uploadCsvColumns": "Name, Last name and Email",
-        "uploadCsvTemplate": "Template",
-        "onlyCsv": "Only .CSV documents"
-      },
-      "profile": {
-        "general": "General information",
-        "title": "Profile"
-      },
-      "errors": {
-        "notDefined": "There are no employees"
-      }
-    },
-    "linkedAccounts": {
-      "my": "Linked Accounts",
-      "profile": {
-        "title": "Profile",
-        "company": "Company profile",
-        "general": "General information"
-      },
-      "pending": {
-        "title": "Pending",
-        "one": "Pending invitation",
-        "multiple": "Pending invitations",
-        "description": "Manage your pending invitations.",
-        "invitationSent": "Invitation sent",
-        "invitationSentDescription": "An email has been sent to {{0}} for creating an account and to accept your invitation.",
-        "empty": "No pending invitations"
-      },
-      "rejected": {},
-      "empty": "You don't have any linked accounts",
-      "imTheProvider": "I'm the provider",
-      "newProvider": "New provider",
-      "newClient": "New client",
-      "new": "New account link",
-      "newDescription": "Link with another organization to share contracts with them",
-      "link": "Link with another account",
-      "invited": "You have invited {{0}} to join as {{1}} on your company {{2}}.",
-      "thereAreNo": "No active linked accounts",
-      "accountFound": "Account found",
-      "accountNotFound": "Account not found",
-      "invitation": {
-        "send": "Send invitation",
-        "toBe": "Invitation to be a",
-        "hasInvitedYou": "has invited you to create a account link between their organization",
-        "andYourCompany": "and your organization",
-        "reasonAsProvider": "to share contracts",
-        "reasonAsClient": "to share contracts",
-        "message": "Message from",
-        "hasSentYou": "has sent you and invitation",
-        "userNotRegistered": "User {{0}} is not registered.",
-        "confirmReject": "Reject invitation?",
-        "rejectWarning": "Reject invitation as {{0}} from {{1}}.",
-        "confirmAccept": "Accept invitation as {{0}}?",
-        "acceptWarning": "Accept invitatiom from {{0}}.",
-        "invite": "Invite user {{0}} to link their account '{{1}}'.",
-        "notFound": "User {{0}} does not belong to the selected organization.",
-        "cannotInviteSelf": "You cannot invite yourself",
-        "cannotInviteCurrentTenant": "You cannot invite the current organization",
-        "inviteOwnersOrAdmins": "You can only invite owners or admins",
-        "existing": "There's an existing link with this organization",
-        "findAccounts": "Find user accounts"
-      },
-      "actions": {
-        "selectOne": "Select a client or provider",
-        "new": "New account link",
-        "edit": "Edit account link"
-      }
-    },
-    "providers": {
-      "empty": "You don't have any providers",
-      "new": {
-        "title": "New provider",
-        "description": "Add a new provider",
-        "add": "Add provider?"
-      }
-    },
-    "clients": {
-      "empty": "You don't have any clients",
-      "new": {
-        "title": "New client",
-        "description": "Add a new client",
-        "add": "Add client?"
-      }
-    },
     "tenants": {
       "empty": "There are no accounts",
       "select": "Select account",
+      "my": "My accounts",
       "youBelongToOne": "You belong to one account",
       "youBelongToMany": "You belong to {{0}} accounts",
       "create": {
