--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -804,168 +804,10 @@
     "dashboard": {
       "summary": "Resumen"
     },
-    "contracts": {
-      "title": "Contratos",
-      "new": {
-        "title": "Nuevo contrato",
-        "description": "Crea contratos con tus clientes o proveedores para firmarlos con su FIEL y darles fecha cierta",
-        "addSignatories": "Agrega los contactos de personas morales/físicas que firmaran con su FIEL",
-        "save": "Crear y solicitar firmas"
-      },
-      "details": {
-        "general": "Información general"
-      },
-      "employees": {},
-      "signatory": "Firmante",
-      "signatories": "Firmantes",
-      "spectator": "Espectador",
-      "status": {
-        "PENDING": "Pendiente",
-        "SIGNED": "Firmado",
-        "ARCHIVED": "Archivado"
-      },
-      "pending": {
-        "title": "Pendientes"
-      },
-      "signed": {
-        "title": "Firmados"
-      },
-      "archived": {
-        "title": "Archivados"
-      },
-      "members": {
-        "add": "Agrega firmantes",
-        "select": "Selecciona los usuarios que firmarán el contrato"
-      },
-      "sign": {},
-      "actions": {
-        "create": "¿Crear contrato?",
-        "createDescription": "Se enviará por correo a los participantes.",
-        "selectSignatoryOrSpectator": "Seleccionar firmantes y espectadores"
-      },
-      "placeholders": {
-        "name": "Nombre del contrato",
-        "description": "Descripción larga del contrato",
-        "signatoryEmail": "firmante{'@'}company.com",
-        "spectatorEmail": "espectador{'@'}company.com"
-      },
-      "activity": {
-        "types": {
-          "CREATED": "Creó contrato",
-          "UPDATED": "Contrato actualizado"
-        }
-      },
-      "errors": {
-        "maxFileReached": "Sube un documento menor a 20 MB. Recuerda que no se requiere firma física para contratos/documentos firmados electrónicamente.",
-        "noContracts": "No hay contratos",
-        "nameRequired": "El contrato debe de tener nombre.",
-        "descriptionRequired": "El contrato debe de tener una descripción.",
-        "fileRequired": "Falta el archivo PDF.",
-        "linkedAccountRequired": "Selecciona un enlace (cliente o proveedor).",
-        "atLeastNSignatories": "Agrega al menos 2 firmantes."
-      }
-    },
-    "employees": {
-      "my": "Mis colaboradores",
-      "new": {
-        "title": "Agregar colaborador",
-        "multiple": "Agregar colaboradores"
-      },
-      "addendum": {},
-      "lists": {},
-      "actions": {
-        "add": "Agregar colaborador",
-        "import": "Importar colaboradores",
-        "select": "Selecciona tus colaboradores que trabajarán en el proyecto",
-        "selectEmployees": "Seleccionar colaboradores",
-        "uploadCsv": "Sube un archivo CSV con columnas",
-        "uploadCsvColumns": "Nombre, Apellido y Correo",
-        "uploadCsvTemplate": "Plantilla",
-        "onlyCsv": "Solo documentos tipo .CSV"
-      },
-      "profile": {
-        "title": "Perfil",
-        "general": "Información general"
-      },
-      "errors": {
-        "notDefined": "No se definieron colaboradores"
-      }
-    },
-    "linkedAccounts": {
-      "my": "Enlaces con cuentas",
-      "profile": {
-        "title": "Perfil",
-        "company": "Perfil de empresa",
-        "general": "Información general del proveedor"
-      },
-      "pending": {
-        "title": "Pendientes",
-        "one": "Invitación pendiente",
-        "multiple": "Invitaciones pendientes",
-        "description": "Administra los enlaces con cuentas pendientes por aceptar.",
-        "invitationSent": "Invitación enviada",
-        "invitationSentDescription": "Se ha enviado un correo a {{0}} para que cree su cuenta y acepte tu invitación.",
-        "empty": "No tienes invitaciones pendientes"
-      },
-      "rejected": {},
-      "empty": "No tienes proveedores ni clientes",
-      "imTheProvider": "Soy el proveedor",
-      "newProvider": "Nuevo proveedor",
-      "newClient": "Nuevo cliente",
-      "new": "Nuevo enlace",
-      "newDescription": "Enlaza con otra empresa para compartir contratos",
-      "link": "Enlazar",
-      "invited": "Has invitado a {{0}} a unirse como {{1}} tu empresa {{2}}.",
-      "thereAreNo": "No se encontraron enlaces con cuentas activos",
-      "accountFound": "Cuenta encontrada",
-      "accountNotFound": "Cuenta no encontrada",
-      "invitation": {
-        "send": "Enviar invitación",
-        "toBe": "Invitación a ser",
-        "hasInvitedYou": "te ha invitado a crear enlace entre su cuenta",
-        "andYourCompany": "y tu cuenta",
-        "reasonAsProvider": "para compartir contratos",
-        "reasonAsClient": "para compartir contratos",
-        "message": "Mensaje de",
-        "hasSentYou": "te ha enviado una invitación",
-        "userNotRegistered": "El usuario {{0}} no está registrado en nuestra plataforma. Envía una invitación para que se registre.",
-        "confirmReject": "¿Rechazar invitación?",
-        "rejectWarning": "Rechazarás ser {{0}} de {{1}}.",
-        "confirmAccept": "¿Aceptar invitación como {{0}}?",
-        "acceptWarning": "Aceptarás invitación de {{0}}.",
-        "invite": "Invitar a {{0}} a enlazar con su cuenta '{{1}}'",
-        "notFound": "El usuario {{0}} no tiene acceso a la organización seleccionada.",
-        "cannotInviteSelf": "No puedes invitarte a ti",
-        "cannotInviteCurrentTenant": "No puedes invitar a la cuenta actual",
-        "inviteOwnersOrAdmins": "Solo puedes invitar a propietarios o administradores",
-        "existing": "Ya existe un enlace con esta cuenta",
-        "findAccounts": "Buscar cuentas de usuario"
-      },
-      "actions": {
-        "selectOne": "Selecciona un cliente o proveedor",
-        "new": "Nuevo enlace con cuenta",
-        "edit": "Editar enlace"
-      }
-    },
-    "providers": {
-      "empty": "No tienes proveedores",
-      "new": {
-        "title": "Nuevo proveedor",
-        "description": "Agrega a tus proveedores para compartir contratos",
-        "add": "¿Agregar proveedor?"
-      }
-    },
-    "clients": {
-      "empty": "No tienes clientes",
-      "new": {
-        "title": "Nuevo cliente",
-        "description": "Agrega a tus clientes para compartir contratos",
-        "add": "¿Agregar cliente?"
-      }
-    },
     "tenants": {
       "empty": "No hay cuentas",
       "select": "Selecciona cuenta",
+      "my": "Mis cuentas",
       "youBelongToOne": "Perteneces a una cuenta",
       "youBelongToMany": "Perteneces a {{0}} cuentas",
       "create": {
