hero: update heading

--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -350,7 +350,7 @@
       "affiliates": "Affiliate program"
     },
     "hero": {
-      "heading": "Full-stack SaaS kit for Next.js",
+      "heading": "Full-stack SaaS kit for founders",
       "subheading": "The quickest way to build a full-stack SaaS app with Next.js, Remix or SvelteKit.",
       "topText": "Next.js RockStack Demo",
       "cta1": "Pricing",
