--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -354,7 +354,7 @@
       "affiliates": "Afiliados"
     },
     "hero": {
-      "heading": "Desarrolla tu SaaS con Next.js",
+      "heading": "El kit de desarrollo SaaS para emprendedores",
       "subheading": "La manera más rápida de desarrollar un SaaS en Next.js, Remix, o SvelteKit.",
       "topText": "Next.js RockStack Demo",
       "cta1": "Ver precios",
